--- a/resume - Chinese.tex
+++ b/resume - Chinese.tex
@@ -8,69 +8,83 @@
 \titlespacing{\section}{0pt}{3pt}{3pt}
 
 \begin{document}
-	\pagestyle{plain}
-	\noindent
-	\begin{tabularx}{\linewidth}{X r}
-		\multirow{3}{*}{\Huge 吴越}
-		& \href{mailto:yuw264@ucsd.edu}{yuw264@ucsd.edu} \\
-		& +1-(858) 666-5847 \\
-		& \href{https://github.com/ALMSIVI}{https://github.com/ALMSIVI}
-	\end{tabularx}
-	
-	\smallskip
-	
-	\section{教育经历}
-	\smallskip
-	\noindent
-	\begin{tabularx}{\linewidth}{l | X}	
-		\texttt{2016.9 -} & \textbf{\large 加州大学圣地亚哥分校} \\
-		\texttt{2020.6} & \textbf{University of California, San Diego} \\
-		\texttt{（预计）} & \textit{专业：计算机科学，辅修：视觉艺术（计算与艺术）} \\
-		& \textbf{（综合GPA：3.88/4 ~~~ 专业GPA：3.95/4)} \\
-		\texttt{已修课程} & 软件工程，交互设计，算法设计，计算能力理论，离散数学，数据结构，计算机架构
-	\end{tabularx}
-	
-	\smallskip
-	
-	\section{项目经历}
-	\smallskip
-	\noindent
-	\begin{tabular}{l r}	
-		\textbf{\large Mechsuit VR} {\small (WIP)} & \textit{程序员、测试员} \\
-		\multicolumn{2}{p{\linewidth}}{学校“虚拟现实社团”小组合作开发项目。该项目是利用Unity游戏引擎开发的一个虚拟现实游戏，玩家佩戴HTC Vive后可以在游戏竞技场中披上动力装甲进行战斗。用C\#语言开发，将逆运动学原理应用到游戏装甲中，并进行VR测试。} \\
-		\textbf{\large Music Manager} & \textit{个人开发者} \\
-		\multicolumn{2}{p{\linewidth}}{采用C\#语言，在WPF平台上开发的个人项目。Music Manager可以播放音乐、管理音乐的ID3标签，并转换音乐格式。} \\
-		\textbf{\large SMSEmail} & \textit{设计师、程序员} \\
-		\multicolumn{2}{p{\linewidth}}{利用Twilio API和Java邮件开发出SMS Email应用程序。使用该程序，在没有网络的情况下，用户可以接受或发送文本信息。本人负责文本格式分析工作。} \\
-		\textbf{\large Flashback Music} & \textit{程序员} \\
-		\multicolumn{2}{p{\linewidth}}{软件工程课程作品，5人合作完成。基于Android平台开发。该App会记录用户播放音乐的时间、地点，用户可以进入“回放模式”来重温他们在这一时段或正在这一地点曾经听过的歌曲。我负责UI的编写，并重构代码使其符合设计模式。} \\
-		\textbf{\large WayAround} & \textit{设计师、前端程序员} \\
-		\multicolumn{2}{p{\linewidth}}{4人小组进行的HCI项目。与一般导航软件不同，步行者可以查找更方便，更安全的路线，但不一定是最快的路线。我编写了首页和评论页。用户可以在首页自定义路径参数，并在评论页对路径进行评价。} \\
-	\end{tabular}
-	
-	\smallskip
-	
-	\section{奖项}
-	\smallskip
-	\noindent
-	\begin{tabularx}{\linewidth}{r | X}
-		\texttt{2017.6} & 校园“初级程序员比赛”第十名
-	\end{tabularx}
-	
-	\smallskip
-	
-	\section{技能}
-	\smallskip
-	\noindent
-	\begin{tabularx}{\linewidth}{r X}
-		\texttt{熟练:} & C\# (Unity, Windows), Java (Android), JavaScript (Node.js), C, \LaTeX \\
-		\texttt{中等:} & C++, Python, HTML \& CSS
-	\end{tabularx}
-	
-	\smallskip
-	
-	\section{兴趣}
-	\smallskip
-	\noindent
-	喜欢绘制漫画和游戏插图，痴迷摇滚乐。对日本动漫、音乐文化兴趣浓厚，正在学习日语。
+\pagestyle{plain}
+\noindent
+\begin{tabularx}{\linewidth}{X r}
+\multirow{3}{*}{\Huge 吴越}
+& \href{mailto:yuw264@ucsd.edu}{yuw264@ucsd.edu} \\
+& +1-(858) 666-5847 \\
+& \href{https://github.com/ALMSIVI}{https://github.com/ALMSIVI}
+\end{tabularx}
+
+\smallskip
+
+\section{教育经历}
+\smallskip
+\noindent
+\begin{tabularx}{\linewidth}{l | X}
+\texttt{2016.9} & \textbf{\large 加州大学圣地亚哥分校} \\
+\textbar & \textbf{University of California, San Diego} \\
+\texttt{2020.6} & \textit{专业：计算机科学，辅修：视觉艺术（计算与艺术）} \\
+& \textbf{目前就读大三。（综合GPA：3.88/4 ~~~ 专业GPA：3.95/4)} \\
+%\texttt{已修课程} & 软件工程，交互设计，算法设计，计算能力理论，离散数学，数据结构，计算机架构
+\end{tabularx}
+
+\smallskip
+
+\section{工作经验}
+\smallskip
+\noindent
+\begin{tabularx}{\linewidth}{l | X}
+\texttt{2018.6} & \textbf{\large 上海莱曼特信息科技} \\
+\textbar & \textit{实习前端工程师} \\
+\texttt{2018.8} & 参加软件的改版，从Flash迁移至HTML5，并重构代码、编写插件，减少代码量，加快运行速度。同时帮助完成软件的本地化（英文），并帮助同一公司的代码规范。 \\
+\end{tabularx}
+\noindent
+
+\smallskip
+
+\section{其它项目}
+\smallskip
+\noindent
+\begin{tabular}{l r}
+\textbf{\large Mechsuit VR} {\small (WIP)} & \textit{程序员、测试员} \\
+\multicolumn{2}{p{\linewidth}}{学校“虚拟现实社团”小组合作开发项目。该项目是利用Unity游戏引擎开发的一个虚拟现实游戏，玩家佩戴HTC Vive后可以在游戏竞技场中披上动力装甲进行战斗。用C\#语言开发，将逆运动学原理应用到游戏装甲中，并进行VR测试。} \\
+\textbf{\large Music Manager} & \textit{个人开发者} \\
+\multicolumn{2}{p{\linewidth}}{采用C\#语言，在WPF平台上开发的个人项目。Music Manager可以播放音乐、管理音乐的ID3标签，并转换音乐格式。} \\
+\textbf{\large SMSEmail} & \textit{设计师、程序员} \\
+\multicolumn{2}{p{\linewidth}}{利用Twilio API和Java邮件开发出SMS Email应用程序。使用该程序，在没有网络的情况下，用户可以接受或发送文本信息。本人负责文本格式分析工作。} \\
+\textbf{\large Flashback Music} & \textit{程序员} \\
+\multicolumn{2}{p{\linewidth}}{软件工程课程作品，5人合作完成。基于Android平台开发。该App会记录用户播放音乐的时间、地点，用户可以进入“回放模式”来重温他们在这一时段或正在这一地点曾经听过的歌曲。我负责UI的编写，并重构代码使其符合设计模式。} \\
+\textbf{\large WayAround} & \textit{前端程序员} \\
+\multicolumn{2}{p{\linewidth}}{4人小组进行的HCI项目（仅前端）。我编写了首页和评论页。用户可以在首页自定义路径参数，并在评论页对路径进行评价。} \\
+\textbf{\large Transracer} & \textit{后端程序员} \\
+\multicolumn{2}{p{\linewidth}}{4人小组进行的HCI项目（前后端），使用Node.js作为服务器端，sqlite作为数据库。我编写了和数据库相关的所有后端逻辑，并实现输入验证的逻辑。}
+\end{tabular}
+
+\smallskip
+
+\section{奖项}
+\smallskip
+\noindent
+\begin{tabularx}{\linewidth}{r | X}
+\texttt{2017.6} & 校园“新手程序员比赛”第十名
+\end{tabularx}
+
+\smallskip
+
+\section{技能}
+\smallskip
+\noindent
+\begin{tabularx}{\linewidth}{r X}
+\texttt{熟练:} & C\# (Unity, Windows), Java (Android), JavaScript (Node.js), C, \LaTeX \\
+\texttt{中等:} & C++, Python, HTML \& CSS
+\end{tabularx}
+
+\smallskip
+
+\section{兴趣}
+\smallskip
+\noindent
+喜欢绘制漫画和游戏插图，痴迷摇滚乐。对日本动漫、音乐文化兴趣浓厚，正在学习日语。
 \end{document}
