--- a/resume.tex
+++ b/resume.tex
@@ -9,7 +9,7 @@
 \begin{document}
 	\noindent
 	\begin{tabularx}{\linewidth}{X r}
-		\multirow{3}{*}{{\fontsize{45}{60}\selectfont Daniel Wu}}
+		\multirow{3}{*}{{\fontsize{45}{60}\selectfont Yue Wu}}
 		& \href{mailto:yuw264@ucsd.edu}{yuw264@ucsd.edu} \\
 		& (858) 666-5847 \\
 		& \href{https://github.com/ALMSIVI}{https://github.com/ALMSIVI}
@@ -25,38 +25,51 @@
 \end{tabularx}
 \end{comment}
 
-\bigskip
+\smallskip
 
 \section{Education}
 \smallskip
 \noindent
 \begin{tabularx}{\linewidth}{l | X}	
-\texttt{Sep 2016 to} & \textbf{\large University of California, San Diego} \\
-\texttt{Jun 2020} & \textit{B.S. in Computer Science, Minor in Visual Arts: Computing and Arts} \\
-\texttt{(Expected)} & A sophomore student at Computer Science and Engineering department in UC San Diego. \textbf{(GPA: 3.88/4)} \\
-\texttt{Current} & Advanced Software Engineering, Interaction Design Programming \\
-\texttt{Courses}
+\texttt{09/2016} & \textbf{\large University of California, San Diego} \\
+\textbar & \textit{B.S. in Computer Science, Minor in Visual Arts: Computing and Arts} \\
+\texttt{06/2020} & Junior student with senior standing. \textbf{(GPA: 3.88/4)} \\
+%\texttt{Current} & Advanced Software Engineering, Interaction Design Programming \\
+%\texttt{Courses}
 \end{tabularx}
 
-\bigskip
+\smallskip
 
-\section{Experiences}
+\section{Work Experience}
+\smallskip
+\noindent
+\begin{tabularx}{\linewidth}{l | X}
+\texttt{06/2018} & \textbf{\large LMT Technology} \\
+\textbar & \textit{Intern Front End Developer} \\
+\texttt{08/2018} & Worked on the migration of the company's product from Flash to HTML5, refactoring code and adding plugins in the process. Reduced code length and boosted execution efficiency. Also helped on English localization and the setting up of a uniform code format. \\
+\end{tabularx}
+
+\smallskip
+
+\section{Side Projects}
 \smallskip
 \noindent
 \begin{tabular}{l r}	
-\textbf{\large Mechsuit VR} {\small (WIP)} & \textit{Programmer and Tester} \\
-\multicolumn{2}{p{\linewidth}}{Worked in a 5-person team of the VR Club. Using HTC Vive and Unity, Mechsuit provides an arena to fight in mechanic armors. Implemented the inverse kinematic system for the armor with C\# and did VR testing.} \\
+\textbf{\large Mechsuit VR} & \textit{Programmer} \\
+\multicolumn{2}{p{\linewidth}}{Worked in a 5-person team of the VR Club. Using HTC Vive and Unity, Mechsuit provides an arena to fight in mechanic armors. Implemented the inverse kinematic system for the armor with C\#. Currently working on the health and weapon system.} \\
 \textbf{\large Music Manager} & \textit{Individual Developer} \\
 \multicolumn{2}{p{\linewidth}}{Using C\# and WPF framework, this Windows application can play music, manage music ID3 tags, and convert music formats.} \\
-\textbf{\large SMSEmail} & \textit{Designer and Programmer} \\
+\textbf{\large SMSEmail} & \textit{Designer \& Programmer} \\
 \multicolumn{2}{p{\linewidth}}{A 3-person team project in SD Hacks 2017. Using Twilio API and Java Mail, built an app to receive and send emails using text messages only without the Internet. I handled the text analysis job.} \\
-\textbf{\large WayAround} & \textit{Designer and Programmer} \\
-\multicolumn{2}{p{\linewidth}}{A 4-person HCI design web application. This app is built for walkers who would like to explore their surroundings or to find a smoother, safer way, but not necessarily the faster one, to their destinations. Implemented the home page, where the user can customize the route via a variety of parameters, and the review page, where the user rates the route based on the previously chosen parameters.} \\
-\textbf{\large Flashback Music} & \textit{Designer and Programmer} \\
-\multicolumn{2}{p{\linewidth}}{A 5-person team software engineering project with Android. This app would record the location and time songs are played and allow users to reminisce of their time in flashback mode. I implemented the main UI and refactored the code to conform to various design patterns.}
+\textbf{\large WayAround} & \textit{Front End Programmer} \\
+\multicolumn{2}{p{\linewidth}}{A 4-person HCI design web application (front end only). Implemented the home page, where the user can customize the route via a variety of parameters, and the review page, where the user rates the route based on the previously chosen parameters.} \\
+\textbf{\large Flashback Music} & \textit{Designer \& Programmer} \\
+\multicolumn{2}{p{\linewidth}}{A 5-person team software engineering project with Android.Implemented the main UI and refactored the code to conform to various design patterns.} \\
+\textbf{\large Transracer} & \textit{Back End Programmer} \\
+\multicolumn{2}{p{\linewidth}}{A 4-person HCI design web application (both front and back ends). Using Node.js and sqlite, implemented all database-related functionality and input-validation logic.}
 \end{tabular}
 
-\bigskip
+\smallskip
 
 \section{Awards}
 \smallskip
@@ -65,7 +78,7 @@
 	\texttt{June 2017} & 10th place at UCSD WIC Beginner's Programming Competition
 \end{tabularx}
 
-\bigskip
+\smallskip
 
 \section{Skills}
 \smallskip
@@ -75,7 +88,8 @@
 	\texttt{Intermediate:} & C++, Python, HTML \& CSS
 \end{tabularx}
 
-\bigskip
+\smallskip
+
 \section{Interests}
 \smallskip
 \noindent
