--- a/resume.tex
+++ b/resume.tex
@@ -15,6 +15,9 @@
 		& \href{https://github.com/ALMSIVI}{https://github.com/ALMSIVI}
 	\end{tabularx}
 	
+	\noindent
+	\textbf{Currently looking for a software engineering intern for Summer 2019 (Jun-Sep).}
+	
 \begin{comment} % Header including mailing address
 \begin{tabularx}{\linewidth}{X r}
 \multirow{4}{*}{{\fontsize{45}{60}\selectfont Yue Wu}} 
@@ -25,7 +28,6 @@
 \end{tabularx}
 \end{comment}
 
-\smallskip
 
 \section{Education}
 \smallskip
@@ -34,11 +36,10 @@
 \texttt{09/2016} & \textbf{\large University of California, San Diego} \\
 \textbar & \textit{B.S. in Computer Science, Minor in Visual Arts: Computing and Arts} \\
 \texttt{06/2020} & Junior student with senior standing. \textbf{(GPA: 3.88/4)} \\
-%\texttt{Current} & Advanced Software Engineering, Interaction Design Programming \\
-%\texttt{Courses}
+\texttt{Courses} & Data Structures, Algorithms, Software Engineering, HCI Design, \\
+\texttt{Taken} & Computer Graphics (WIP), Computer Systems (WIP)
 \end{tabularx}
 
-\smallskip
 
 \section{Work Experience}
 \smallskip
@@ -46,30 +47,22 @@
 \begin{tabularx}{\linewidth}{l | X}
 \texttt{06/2018} & \textbf{\large LMT Technology} \\
 \textbar & \textit{Intern Front End Developer} \\
-\texttt{08/2018} & Worked on the migration of the company's product from Flash to HTML5, refactoring code and adding plugins in the process. Reduced code length and boosted execution efficiency. Also helped on English localization and the setting up of a uniform code format. \\
+\texttt{08/2018} & Worked on the migration of the company's product from Flash to HTML and Javascript. Reduced code length and boosted execution efficiency. Also helped on English localization and the setting up of a uniform code format. \\
 \end{tabularx}
 
-\smallskip
 
-\section{Side Projects}
+\section{Other Projects}
 \smallskip
 \noindent
 \begin{tabular}{l r}	
-\textbf{\large Mechsuit VR} & \textit{Programmer} \\
-\multicolumn{2}{p{\linewidth}}{Worked in a 5-person team of the VR Club. Using HTC Vive and Unity, Mechsuit provides an arena to fight in mechanic armors. Implemented the inverse kinematic system for the armor with C\#. Currently working on the health and weapon system.} \\
-\textbf{\large Music Manager} & \textit{Individual Developer} \\
-\multicolumn{2}{p{\linewidth}}{Using C\# and WPF framework, this Windows application can play music, manage music ID3 tags, and convert music formats.} \\
-\textbf{\large SMSEmail} & \textit{Designer \& Programmer} \\
-\multicolumn{2}{p{\linewidth}}{A 3-person team project in SD Hacks 2017. Using Twilio API and Java Mail, built an app to receive and send emails using text messages only without the Internet. I handled the text analysis job.} \\
-\textbf{\large WayAround} & \textit{Front End Programmer} \\
-\multicolumn{2}{p{\linewidth}}{A 4-person HCI design web application (front end only). Implemented the home page, where the user can customize the route via a variety of parameters, and the review page, where the user rates the route based on the previously chosen parameters.} \\
+\textbf{\large Mechsuit VR} & \textit{Scripting Programmer} \\
+\multicolumn{2}{p{\linewidth}}{A 5-person VR club game project featuring HTC Vive and Unity. I implemented the inverse kinematic system for the armor, and helped in the movement propulsion system. Currently I'm working on the health and weapon system, as well as the UI display.} \\
 \textbf{\large Flashback Music} & \textit{Designer \& Programmer} \\
-\multicolumn{2}{p{\linewidth}}{A 5-person team software engineering project with Android.Implemented the main UI and refactored the code to conform to various design patterns.} \\
+\multicolumn{2}{p{\linewidth}}{A 5-person team software engineering project with Android. I implemented the main UI and refactored code to conform to various design patterns.} \\
 \textbf{\large Transracer} & \textit{Back End Programmer} \\
-\multicolumn{2}{p{\linewidth}}{A 4-person HCI design web application (both front and back ends). Using Node.js and sqlite, implemented all database-related functionality and input-validation logic.}
+\multicolumn{2}{p{\linewidth}}{A 4-person HCI design web application. Using Node.js and sqlite, I implemented all database-related functionality and input validation logic.}
 \end{tabular}
 
-\smallskip
 
 \section{Awards}
 \smallskip
@@ -78,20 +71,19 @@
 	\texttt{June 2017} & 10th place at UCSD WIC Beginner's Programming Competition
 \end{tabularx}
 
-\smallskip
 
 \section{Skills}
 \smallskip
 \noindent
 \begin{tabularx}{\linewidth}{r X}
-	\texttt{Proficient:} & C\# (Unity and Windows), Java (Android), JavaScript (Node.js), C, \LaTeX \\
-	\texttt{Intermediate:} & C++, Python, HTML \& CSS
+	\texttt{Proficient:} & C\# (Unity \& Windows), Java (Android \& JavaFX), HTML \& CSS, JavaScript (jQuery \& Node.js), \LaTeX, SQL \\
+	\texttt{Intermediate:} & C, C++, Python \\
+	\texttt{Learning:} & Javascript(React.js), OpenGL
 \end{tabularx}
 
-\smallskip
 
 \section{Interests}
 \smallskip
 \noindent
-I love drawing illustrations about comics and games. I am also a huge fan of rock music. I am now studying Japanese to better understand Japanese anime culture and their way of drawing.
+I am fascinated by popular art (comics, games as well as rock music) and always wonder how far computers can take me in creating art. This leads me to minor in Visual Arts.
 \end{document}
