--- a/resume.tex
+++ b/resume.tex
@@ -10,6 +10,15 @@
 % List style
 \setlist[itemize]{leftmargin=*, before=\vspace{-0.5\baselineskip}, after=\vspace{-\baselineskip}, nosep}
 
+% Customized multicolumn
+\newcommand{\itemcols}[1]{
+	\multicolumn{2}{p{\dimexpr \linewidth-2\tabcolsep}}{
+	\begin{itemize}
+		#1
+	\end{itemize}
+	}
+}
+
 \begin{document}
 \noindent
 \begin{tabularx}{\linewidth}{X r}
@@ -42,8 +51,10 @@
 \noindent
 \begin{tabularx}{\linewidth}{X r}
 	\textbf{\large University of California, San Diego} & \texttt{09/2016-06/2020} \\
-	\textit{B.S. in Computer Science, Minor in Visual Arts: Computing and Arts} \textbf{(GPA: 3.88/4)} & \\
-	Courses Taken: Data Structures, Algorithms, Software Engineering, HCI Design, Computer Graphics
+	\itemcols{
+		\item B.S. in Computer Science, Minor in Visual Arts: Computing and Arts \textbf{(GPA: 3.90/4)}
+		\item Courses Taken: Data Structures, Algorithms, Software Engineering, HCI Design, Computer Graphics
+	}
 \end{tabularx}
 
 
@@ -52,12 +63,10 @@
 \noindent
 \begin{tabularx}{\textwidth}{X r}
 	\textbf{\large Intern Full Stack Developer}, LMT Technology, Shanghai, China & \texttt{06/2018-08/2018} \\
-	\multicolumn{2}{p{\linewidth}}{
-		\begin{itemize}
-			\item Worked on the migration of the company's product from Flash to HTML and Javascript, and from a custom back end to Spring framework. Reduced code length and boosted execution efficiency.
-			\item Improved the translation of the product's English version, making it more understandable by English speakers. Met with English-speaking customers and promoted the product to them. 
-			\item Introduced JSDoc, a documentation format for Javascript, to the team, setting up a uniform code format.
-		\end{itemize}
+	\itemcols{
+		\item Worked on migration of the company's product from Flash to HTML and Javascript, and from a custom back end to Spring framework. Reduced code length and boosted execution efficiency.
+		\item Improved translation of the product's English version, making it more understandable by English speakers. Met with English-speaking customers and promoted the product. 
+		\item Introduced JSDoc, a documentation format for Javascript, to the team, setting up a uniform code format.
 	} 
 \end{tabularx}
 
@@ -67,60 +76,41 @@
 \noindent
 \begin{tabularx}{\linewidth}{X r}
 	\textbf{\large Bodylogical MR}, Unity Developer & \texttt{10/2018-Present} \\
-	\multicolumn{2}{p{\linewidth}}{
-		\begin{itemize}
-			\item Working with Prof. Jurgen Schulze from UCSD CS department. This is an iOS AR app that would visualize and predict people's health data based on their lifestyles. 
-			\item Designed a 3D control panel with Blender so that users could navigate in 3D space to set parameters.
-			\item Currently designing data panels with Unity UI components and C\#. Devised 3D ribbon charts to display health statistics, thus utilizing AR space to clearly visualize data both across different lifestyles and across time.
-		\end{itemize}
+	\itemcols{		
+		\item Working with Prof. Jurgen Schulze from UCSD CS department. This is an iOS AR app that would visualize and predict people's health data based on their lifestyles. 
+		\item Designed a 3D control panel with Blender so that users could navigate in 3D space to set parameters. Also designed health props (gym equipements, hospital beds, etc.) to give an instinctive impression on health status.
+		\item Designed data panels with C\#. Devised 3D ribbon charts to display health statistics, thus utilizing AR space to clearly visualize data both across different lifestyles and across time.
 	} \\
 	
 	\textbf{\large Mechsuit VR}, Unity Developer & \texttt{04/2017-Present} \\
-	\multicolumn{2}{p{\linewidth}}{
-		\begin{itemize}
-			\item Working in a 5-person team in VR club to create a game featuring Steam VR and Unity. Players would wear mechanic armors and fight in an arena.
-			\item Implemented the inverse kinematic system for the armor using the positions of the VR headset and hand-held controllers. The suit's arm would match the player's arm movements, enabling efficient control of the armor.
-			\item Programmed a propulsion system with user movements as input, enabling motion control for users, who would have to physically move to traverse through the arena instead of fiddling with the joystick. 
-			\item Designed health and weapon systems, and UI for health and ammo display. Wrote health and weapon scripts with Strategy Pattern and interfaces so that they can be easily extended to add more damage types and player resistances.
-		\end{itemize}
+	\itemcols{
+		\item Working in a 5-person team in VR club to create a game featuring Steam VR and Unity. Players would wear mechanic armors and fight in an arena.
+		\item Implemented the inverse kinematic system for the armor using the positions of the VR headset and hand-held controllers. The suit's arm would match the player's arm movements, enabling efficient control of the armor.
+		\item Programmed a propulsion system with player movements as input, enabling motion control for players, who would have to physically move to traverse through the arena instead of fiddling with the joystick. 
+		\item Designed health and weapon systems, and UI for health and ammo display. Wrote health and weapon scripts with Strategy Pattern and interfaces so that they can be easily extended to add more damage types and player resistances.
 	} \\
 	
 	\textbf{\large Transracer}, Full Stack Developer & \texttt{04/2018-06/2018} \\
-	\multicolumn{2}{p{\linewidth}}{
-		\begin{itemize}
-			\item Worked in a 4-person team to create a web application with both front end (Bootstrap) and back end (Node.js). Transracer allows user to learn different languages through translating lyrics.
-			\item Developed all the database logic with sqlite for songs and scores, so that users can upload their favorite songs to the app for practice, and view their past attempts.
-			\item Helped my Cognitive Science major teammate to get familiar with jQuery in front end development. Improved score calculation based on the number of hints the user relies on and the correctness of the answer.
-		\end{itemize}
+	\itemcols{
+		\item Worked in a 4-person team to create a web application with both front end (Bootstrap) and back end (Node.js). The app allows user to learn different languages through translating lyrics.
+		\item Developed all the database logic with sqlite for songs and scores, so that users can upload their favorite songs to the app for practice, and view their past attempts.
+		\item Improved score calculation based on the number of hints the user relies on and the correctness of the answer.
 	} \\
 	
 	\textbf{\large WayAround}, Front End Developer & \texttt{01/2018-03/2018} \\
-	\multicolumn{2}{p{\linewidth}}{
-		\begin{itemize}
-			\item Worked in a 4-person team to create a web application mockup (front end only). The app would not give the fastest route between two points; it allows users to customize their routes so as to enjoy the trip iteslf.
-			\item After paper prototypes, implemented the home page with Bootstrap, jQuery and Handlebars.js, where the users would customize the route. Wrote two versions of the page for A/B testing, analyzing the time each user used in navigating through the page to find out how users would approach a new product and modified to make the page user-friendly.
-			\item Perfected the review page, where the user rates the route based on their customization back on the home page.
-		\end{itemize}	
+	\itemcols{
+		\item Worked in a 4-person team to create a web application mockup. The app allows users to customize their routes so as to enjoy the trip to the destination.
+		\item After paper prototypes, implemented the home page with Bootstrap, jQuery and Handlebars.js, where the users would customize the route. Wrote two versions of the page for A/B testing, analyzing the time each user used in navigating through the page to find out how users would approach a new product and modified to make the page user-friendly.
+		\item Perfected the review page, where the user rates the route based on their customization back on the home page.	
 	} \\
 
 	\textbf{\large Flashback Music}, Android Developer & \texttt{01/2018-03/2018} \\
-	\multicolumn{2}{p{\linewidth}}{
-		\begin{itemize}
-			\item Worked in a 5-person, Agile team to create an Android application, with Firebase integration. This music app records the time and location songs are played so that users could trace their life.
-			\item Separated UI interaction and back end logic with Model-View-Controller pattern resulting in cleaner code.
-			\item Devised separate logic for music stored locally or remotely under a set of interfaces with Strategy and Factory patterns.
-		\end{itemize}
+	\itemcols{
+		\item Worked in a 5-person, Agile team to create an Android application. This music app records the time and location songs are played so that users could reminisce on their moods.
+		\item Separated UI interaction and back end logic with Model-View-Controller pattern resulting in cleaner code.
+		\item Devised separate logic for local and cloud music under a set of interfaces with Strategy and Factory patterns.
 	}
 \end{tabularx}
-
-% Little to talk about
-\begin{comment}
-\texttt{10/2018} & \textbf{Music Manager} \\
-\textbar & \textit{Individual Developer} \\
-\texttt{Present} & \begin{itemize}
-\item Completed a music file tag manager using C\# and WPF framework. this Windows application can play music and manage music ID3 tags.
-\end{itemize} \\
-\end{comment}
 
 % Not a big deal
 \begin{comment}
@@ -135,8 +125,8 @@
 \section{Skills}
 \smallskip
 \noindent
-\begin{tabularx}{\linewidth}{r X}
-	\texttt{Languages} & C\#, Java, HTML, CSS, Javascript, C, C++, Python, \LaTeX \\
+\begin{tabularx}{\linewidth}{l X}
+	\texttt{Language} & C\#, Java, HTML, CSS, Javascript, C, C++, Python, \LaTeX \\
 	\texttt{Technology} & Unity, SteamVR, Windows Desktop, Android, JavaFX, jQuery, Node.js, SQL, OpenGL, React.js, Spring \\
 	\texttt{Software} & Visual Studio, Android Studio, vim, Blender, git, Linux
 \end{tabularx}
