--- a/resume.tex
+++ b/resume.tex
@@ -19,6 +19,7 @@
 	}
 }
 
+
 \begin{document}
 \noindent
 \begin{tabularx}{\linewidth}{X r}
@@ -29,10 +30,10 @@
 \end{tabularx}
 
 % If explicitly asked to, uncomment.
-\begin{comment}
+%\begin{comment}
 \noindent
-\textbf{Currently looking for a software engineering intern for Summer 2019 (Jun-Sep).}
-\end{comment}
+%\textbf{I am looking for software engineering internship opportunities for Summer 2019 (Jun-Sep).}
+%\end{comment}
 
 % Header including mailing address
 \begin{comment}
@@ -53,8 +54,18 @@
 	\textbf{\large University of California, San Diego} & \texttt{09/2016-06/2020} \\
 	\itemcols{
 		\item B.S. in Computer Science, Minor in Visual Arts: Computing and Arts \textbf{(GPA: 3.90/4)}
-		\item Courses Taken: Data Structures, Algorithms, Software Engineering, HCI Design, Computer Graphics
+		\item Courses Taken: Data Structures, Algorithms, Software Engineering, HCI Design, Computer Graphics, Operating Systems
 	}
+\end{tabularx}
+
+
+\section{Skills}
+\smallskip
+\noindent
+\begin{tabularx}{\linewidth}{l X}
+	\texttt{Language} & C\#, Java, HTML, CSS, Javascript, C, C++, Python, \LaTeX \\
+	\texttt{Framework} & Unity, SteamVR, Windows Desktop, Android, JavaFX, jQuery, Node.js, SQL, OpenGL, React.js, Spring \\
+	\texttt{Software} & Visual Studio, Android Studio, vim, Blender, git, Linux
 \end{tabularx}
 
 
@@ -77,17 +88,20 @@
 \begin{tabularx}{\linewidth}{X r}
 	\textbf{\large Bodylogical MR}, Unity Developer & \texttt{10/2018-Present} \\
 	\itemcols{		
-		\item Working with Prof. Jurgen Schulze from UCSD CS department. This is an iOS AR app that would visualize and predict people's health data based on their lifestyles. 
-		\item Designed a 3D control panel with Blender so that users could navigate in 3D space to set parameters. Also designed health props (gym equipements, hospital beds, etc.) to give an instinctive impression on health status.
+		\item Working with Prof. Jurgen Schulze from UCSD Qualcomm Institute. This is an iOS AR app that would demonstrate the functions and use cases of Bodylogical, a human health simulator.
+		% \item Designed a 3D control panel with Blender so that users could navigate in 3D space to set parameters. Also designed health props (gym equipements, hospital beds, etc.) to give an instinctive impression on health status.
 		\item Designed data panels with C\#. Devised 3D ribbon charts to display health statistics, thus utilizing AR space to clearly visualize data both across different lifestyles and across time.
+		\item Developed an animation system with Unity. Characters would perform different activities, giving an instinct reflection of his/her health status.
+		\item Currently working on a ``Prius'' view that would visualize how specific health metrics affect one's internal health.
 	} \\
 	
 	\textbf{\large Mechsuit VR}, Unity Developer & \texttt{04/2017-Present} \\
 	\itemcols{
 		\item Working in a 5-person team in VR club to create a game featuring Steam VR and Unity. Players would wear mechanic armors and fight in an arena.
 		\item Implemented the inverse kinematic system for the armor using the positions of the VR headset and hand-held controllers. The suit's arm would match the player's arm movements, enabling efficient control of the armor.
-		\item Programmed a propulsion system with player movements as input, enabling motion control for players, who would have to physically move to traverse through the arena instead of fiddling with the joystick. 
-		\item Designed health and weapon systems, and UI for health and ammo display. Wrote health and weapon scripts with Strategy Pattern and interfaces so that they can be easily extended to add more damage types and player resistances.
+		\item Programmed a propulsion system with player movements as input, enabling motion control for players, who would physically move to traverse through the arena instead of using the joystick.
+		\item Designed health and weapon systems, and UI for health and ammo display. Wrote scripts with Strategy Pattern and interfaces so that they can be easily extended for various damage types and player resistances.
+		\item Currently working on a motion recognition system with Tensorflow and LSTM. Players would be able to switch weapons by performing different actions.
 	} \\
 	
 	\textbf{\large Transracer}, Full Stack Developer & \texttt{04/2018-06/2018} \\
@@ -97,13 +111,8 @@
 		\item Improved score calculation based on the number of hints the user relies on and the correctness of the answer.
 	} \\
 	
-	\textbf{\large WayAround}, Front End Developer & \texttt{01/2018-03/2018} \\
-	\itemcols{
-		\item Worked in a 4-person team to create a web application mockup. The app allows users to customize their routes so as to enjoy the trip to the destination.
-		\item After paper prototypes, implemented the home page with Bootstrap, jQuery and Handlebars.js, where the users would customize the route. Wrote two versions of the page for A/B testing, analyzing the time each user used in navigating through the page to find out how users would approach a new product and modified to make the page user-friendly.
-		\item Perfected the review page, where the user rates the route based on their customization back on the home page.	
-	} \\
 
+	
 	\textbf{\large Flashback Music}, Android Developer & \texttt{01/2018-03/2018} \\
 	\itemcols{
 		\item Worked in a 5-person, Agile team to create an Android application. This music app records the time and location songs are played so that users could reminisce on their moods.
@@ -111,6 +120,15 @@
 		\item Devised separate logic for local and cloud music under a set of interfaces with Strategy and Factory patterns.
 	}
 \end{tabularx}
+
+	\begin{comment}
+\textbf{\large WayAround}, Front End Developer & \texttt{01/2018-03/2018} \\
+\itemcols{
+\item Worked in a 4-person team to create a web application mockup. The app allows users to customize their routes so as to enjoy the trip to the destination.
+\item After paper prototypes, implemented the home page with Bootstrap, jQuery and Handlebars.js, where the users would customize the route. Wrote two versions of the page for A/B testing, analyzing the time each user used in navigating through the page to find out how users would approach a new product and modified to make the page user-friendly.
+\item Perfected the review page, where the user rates the route based on their customization back on the home page.	
+} \\
+\end{comment}
 
 % Not a big deal
 \begin{comment}
@@ -121,15 +139,6 @@
 	10th place at UCSD WIC Beginner's Programming Competition & \texttt{06/2017}
 \end{tabularx}
 \end{comment}
-
-\section{Skills}
-\smallskip
-\noindent
-\begin{tabularx}{\linewidth}{l X}
-	\texttt{Language} & C\#, Java, HTML, CSS, Javascript, C, C++, Python, \LaTeX \\
-	\texttt{Technology} & Unity, SteamVR, Windows Desktop, Android, JavaFX, jQuery, Node.js, SQL, OpenGL, React.js, Spring \\
-	\texttt{Software} & Visual Studio, Android Studio, vim, Blender, git, Linux
-\end{tabularx}
 
 % Not useful for job seeking
 \begin{comment}
